<resources>
    <string name="app_name">Android MVVM Boilerplate Hilt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="welcome">Welcome Back</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="name_hint">Tên</string>
    <string name="have_an_account">Đã có tài khoản?</string>
    <string name="create_account">Đăng Ký Tài Khoản</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="price">Giá</string>
    <string name="apply">Áp dụng</string>
    <string name="cancel">Huỷ</string>
    <string name="option">Tuỳ chọn</string>
    <string name="reset">Đặt lại</string>
    <string name="number_people">Số người</string>
    <string name="recommend_hotel">Đề xuất</string>
    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_profile">Profile</string>
    <string name="hh_mm">HH:mm</string>
    <string name="dd_mm_yyyy_hh_mm">DD/MM/YYYY HH:MM</string>
</resources>