<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.gianghv.android.views.main.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_rounded_radius"
        android:padding="@dimen/dp_20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_17"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:baselineAligned="false"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/tvFilter"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_in"
                    android:textSize="@dimen/title_filter_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutCheckIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_43"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/bg_bored_radius"
                    android:gravity="center"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:id="@+id/tvCheckInTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dd_mm_yyyy_hh_mm"
                        android:textSize="@dimen/sp_17" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:src="@drawable/ic_calendar_outlined"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_out"
                    android:textSize="@dimen/title_filter_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutCheckOut"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_43"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/bg_bored_radius"
                    android:gravity="center"
                    android:padding="@dimen/dp_10">

                    <TextView
                        android:id="@+id/tvCheckOutTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dd_mm_yyyy_hh_mm"
                        android:textSize="@dimen/sp_17" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_30"
                        android:src="@drawable/ic_calendar_outlined"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:baselineAligned="false"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/layoutTime"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_people"
                    android:textSize="@dimen/title_filter_text_size"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_43"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/bg_bored_radius"
                    android:padding="@dimen/dp_7">

                    <ImageView
                        android:id="@+id/btnDecreasePeople"
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:onClick="@{() -> homeViewModel.decreasePeopleCount()}"
                        android:src="@drawable/ic_remove"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvCountPeople"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tvCountPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{homeViewModel._peopleCount.toString()}"
                        android:textSize="@dimen/sp_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/btnIncreasePeople"
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:onClick="@{() -> homeViewModel.increasePeopleCount()}"
                        android:src="@drawable/ic_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvCountPeople"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layoutOption">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="@dimen/title_filter_text_size"
                android:textStyle="bold" />


            <com.google.android.material.slider.RangeSlider
                android:id="@+id/priceRangeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="100"
                android:valueFrom="500"
                android:valueTo="10000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStartPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="500K VNĐ"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_18" />

                <ImageView
                    android:layout_width="@dimen/dp_17"
                    android:layout_height="@dimen/dp_17"
                    android:src="@drawable/ic_remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tvCountPeople"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvEndPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5"
                    android:text="10000K VNĐ"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/apply"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>